--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REDIRECT_URI=http://localhost:3000
+REDIRECT_URI=https://master.d31j3nijmo1m79.amplifyapp.com
 CLIENT_ID=853556b1fbc44f33b98fab9d95d8eca9
 CLIENT_SECRET=094810df4fba444e9b58e5cba13db5e9
